# WyrmOS

./: .gitignore  README.md  build.sh  configure.sh  image.sh  initrd.sh  install_configs.sh  launch-debug.sh  launch.sh  meson.build  meson.options  rebuild_and_launch.sh  sync-image.sh
.nvim/: session.vim
kernel/: asm.c  exp_gen_wrapper.sh  generate_internal_exports.py  globals.c  kernel.c  limine.cfg  link.ld  meson.build  panic.c  symbols.c
kernel/arch/: arch.h
kernel/arch/x86_64/: init.c  meson.build  misc.asm  misc.c
kernel/arch/x86_64/cpu/: interrupt.asm  interrupt.c  pic.c  syscall.c
kernel/arch/x86_64/dev/: cmos.asm  cmos.c  pit.c
kernel/arch/x86_64/include/cpu/: _syscall.h  interrupt.h  pic.h
kernel/arch/x86_64/include/dev/: cmos.h
kernel/arch/x86_64/include/mem/: gdt.h
kernel/arch/x86_64/include/proc/: lapic.h
kernel/arch/x86_64/mem/: mem.asm  mem.c  paging.asm  paging.c
kernel/arch/x86_64/proc/: process.asm  signal.c  smp.c
kernel/cpu/: interrupt.asm  interrupt.c  pic.c  syscall.c
kernel/dev/: acpi.c  log.c  null.c  pci.c  pit.c  random.c  serial.c  terminal.c  timer.c
kernel/exec/: elf.c  exec.c  initrd.c  module.c
kernel/fs/: fs.c  path.c
kernel/include/: arch.h  asm.h  debug.h  globals.h  panic.h  symbols.h  util.h
kernel/include/cpu/: interrupt.h  pic.h  syscall.h
kernel/include/dev/: acpi.h  log.h  misc.h  pci.h  pit.h  serial.h  terminal.h  timer.h
kernel/include/exec/: elf.h  exec.h  initrd.h  module.h
kernel/include/fs/: fs.h  path.h
kernel/include/mem/: alloc.h  mem.h  mmap.h  mmio.h  paging.h  pmm.h
kernel/include/proc/: process.h  smp.h  spinlock.h
kernel/mem/: alloc.c  mem.asm  mem.c  mmap.c  mmio.c  paging.asm  paging.c  pmm.c
kernel/proc/: process.asm  process.c  smp.c
kernel/src/: kernel.c
lib/: meson.build
lib/libc/: assert.c  crt0.asm  dirent.c  fcntl.c  libc.c  meson.build  signal.c  unistd.c
lib/libc/ctype/: ctype.c
lib/libc/include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  signal.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
lib/libc/include/sys/: mman.h  signal.h  types.h  wait.h  wyrm.h
lib/libc/include/wyrm/: syscall.h
lib/libc/stdio/: printf.c  stdio.c
lib/libc/stdlib/: _alloc.c  alloc.c  env.c  stdlib.c
lib/libc/string/: memory.c  string.c
lib/libc/sys/: mman.c  wait.c
lib/libc/wyrm/: syscall.asm
lib/types/: list.c  meson.build  tree.c  util.c
lib/types/include/types/: list.h  tree.h  util.h
misc/etc/: fstab
misc/etc/init.d/: test.sh
modules/: meson.build
modules/ahci/: main.c  meson.build
modules/ata/: main.c  meson.build
modules/gptpart/: main.c  meson.build
modules/test/: main.c  meson.build
modules/video/: main.c  meson.build
run/boot/limine/: limine.cfg
run/include/: ctype.h  string.h
run/include/kernel/: debug.h
tools/: binutils.patch  elf_i386_wyrm.sh  elf_x86_64_wyrm.sh  env.sh  gcc.patch  setup_env.sh  wyrm.h  x86_64-elf.txt  x86_64-wyrm.txt
user/: meson.build
user/init/: main.c  meson.build
user/wsh/: main.c  meson.build
